--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-loading-skeleton": "^3.2.1",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
