--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "http-constants-ts": "^1.0.7",
     "jsonwebtoken": "^9.0.0",
     "ky": "^0.33.3",
+    "mdimg": "^0.2.3",
     "next": "13.3.1",
+    "notion-to-md": "^2.5.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
