--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.2.1",
+    "react-markdown": "^8.0.7",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/jsonwebtoken": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
