--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@ably-labs/react-hooks": "^2.1.1",
     "@notionhq/client": "^2.2.4",
     "@tanstack/react-query": "^4.29.5",
     "@types/node": "18.16.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "concurrently": "^8.0.1",
