Update authentication implementation

--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
     "@ably-labs/react-hooks": "^2.1.1",
     "@notionhq/client": "^2.2.4",
     "@tanstack/react-query": "^4.29.5",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "cloudflare-client": "^0.3.2",
     "daisyui": "^2.51.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "http-constants-ts": "^1.0.7",
+    "install": "^0.13.0",
+    "jose": "^4.14.4",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.0",
     "ky": "^0.33.3",
     "mdimg": "^0.2.3",
     "next": "13.3.1",
     "notion-to-md": "^2.5.6",
+    "npm": "^9.6.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,11 +40,13 @@
     "react-markdown": "^8.0.7",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/uuid": "^9.0.1",
     "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
