--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
 API_URL=
+
 RYGHLTMFFKDLEM_PASSWORD=
+SESSION_EXPIRES_IN=
+
 JWT_SECRET=
+JWT_EXPIRES_IN=
+
 NOTION_INTEGRATION_SECRET=
+
 ABLY_API_KEY=
+
+CLOUDFLARE_ACCOUNT_ID=
+CLOUDFLARE_API_KEY=
+CLOUDFLARE_KV_NAMESPACE_ID=
+
+
