Add page creation and saving

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 API_URL=
 
-RYGHLTMFFKDLEM_PASSWORD=
+GLOBAL_PASSWORD=
 SESSION_EXPIRES_IN=
 
 JWT_SECRET=
@@ -13,5 +13,7 @@ ABLY_API_KEY=
 CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_API_KEY=
 CLOUDFLARE_KV_NAMESPACE_ID=
-
+CLOUDFLARE_ACCESS_KEY_ID=
+CLOUDFLARE_SECRET_ACCESS_KEY=
+CLOUDFLARE_R2_BUCKET=
 
