--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,12 +13,15 @@
     "@ably-labs/react-hooks": "^2.1.1",
     "@notionhq/client": "^2.2.4",
     "@tanstack/react-query": "^4.29.5",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "cloudflare-client": "^0.3.2",
+    "cloudflare-r2": "^1.0.0",
     "daisyui": "^2.51.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
