--- a/package.json
+++ b/package.json
@@ -14,27 +14,18 @@
     "@notionhq/client": "^2.2.4",
     "@tanstack/react-query": "^4.29.5",
     "@toast-ui/react-editor": "^3.2.3",
-    "@types/js-cookie": "^3.0.3",
-    "@types/node": "18.16.1",
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "cloudflare-client": "^0.3.2",
     "cloudflare-r2": "^1.0.0",
     "daisyui": "^2.51.6",
-    "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
     "http-constants-ts": "^1.0.7",
-    "install": "^0.13.0",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.0",
     "ky": "^0.33.3",
     "mdimg": "^0.2.3",
     "next": "13.3.1",
     "notion-to-md": "^2.5.6",
-    "npm": "^9.6.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -43,21 +34,24 @@
     "react-markdown": "^8.0.7",
     "react-use": "^17.4.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4",
-    "uuid": "^9.0.0"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "^20.1.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/uuid": "^9.0.1",
-    "@types/ws": "^8.5.4",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "ably": "^1.2.39",
     "concurrently": "^8.0.1",
     "cspell": "^6.31.1",
+    "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "^13.4.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
