Create setup script for supabase resources

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ CLOUDFLARE_ACCESS_KEY_ID=
 CLOUDFLARE_SECRET_ACCESS_KEY=
 CLOUDFLARE_R2_BUCKET=
 
+SUPABASE_PROJECT_URL=
+SUPABASE_SERVICE_API_KEY=
+SUPABASE_DATABASE_PASSWORD=
+SUPABASE_BUCKET_NAME=
+
