--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ably-labs/react-hooks": "^2.1.1",
     "@notionhq/client": "^2.2.4",
+    "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.29.5",
     "@toast-ui/react-editor": "^3.2.3",
     "autoprefixer": "10.4.14",
@@ -48,6 +49,7 @@
     "ably": "^1.2.39",
     "concurrently": "^8.0.1",
     "cspell": "^6.31.1",
+    "dotenv": "^16.0.3",
     "eslint": "^8.40.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
