--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@ably-labs/react-hooks": "^2.1.1",
-    "@notionhq/client": "^2.2.4",
     "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.29.5",
     "@toast-ui/react-editor": "^3.2.3",
@@ -25,7 +24,6 @@
     "ky": "^0.33.3",
     "mdimg": "^0.2.3",
     "next": "13.3.1",
-    "notion-to-md": "^2.5.6",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,6 +31,7 @@
     "react-loading-skeleton": "^3.2.1",
     "react-markdown": "^8.0.7",
     "react-use": "^17.4.0",
+    "rehype-raw": "^6.1.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
