Use Supabase for realtime (replace Ably)

--- a/.env.example
+++ b/.env.example
@@ -6,14 +6,14 @@ SESSION_EXPIRES_IN=
 JWT_SECRET=
 JWT_EXPIRES_IN=
 
-ABLY_API_KEY=
-
 CLOUDFLARE_ACCOUNT_ID=
 CLOUDFLARE_API_KEY=
 CLOUDFLARE_KV_NAMESPACE_ID=
 
-SUPABASE_PROJECT_URL=
 SUPABASE_SERVICE_API_KEY=
 SUPABASE_DATABASE_PASSWORD=
 SUPABASE_BUCKET_NAME=
+
+NEXT_PUBLIC_SUPABASE_PROJECT_URL=
+NEXT_PUBLIC_SUPABASE_PUBLIC_ANON_KEY=
 
