Update page preview implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "tailwind.config.js", "setup.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "tailwind.config.js",
+    "setup.js",
+    "next.config.js"
+  ],
   "exclude": ["node_modules"]
 }
