--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-use": "^17.4.0",
     "rehype-raw": "^6.1.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "use-indexeddb": "^2.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
