--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "classnames": "^2.3.2",
     "cloudflare-client": "^0.3.2",
     "daisyui": "^3.0.22",
+    "html-to-image": "^1.11.11",
     "http-constants-ts": "^1.0.7",
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
-    "mdimg": "^0.2.3",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
