--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
     "**/*.ts",
     "**/*.tsx",
     "tailwind.config.js",
-    "setup.js",
-    "next.config.js"
+    "next.config.js",
+    "setup/**/*.js"
   ],
   "exclude": ["node_modules"]
 }
