--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ CLOUDFLARE_KV_NAMESPACE_ID=
 SUPABASE_SERVICE_API_KEY=
 SUPABASE_DATABASE_PASSWORD=
 SUPABASE_BUCKET_NAME=
+SUPABASE_DATABASE_CONNECTION_STRING=
+SUPABASE_DATABASE_SSL_CERTIFICATE=
 
 NEXT_PUBLIC_SUPABASE_PROJECT_URL=
 NEXT_PUBLIC_SUPABASE_PUBLIC_ANON_KEY=
