Update setup scripts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    "tailwind.config.js",
-    "next.config.js",
-    "setup/**/*.js"
-  ],
-  "exclude": ["node_modules"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "tailwind.config.js", "next.config.js"],
+  "exclude": ["node_modules"],
+  "ts-node": {
+    "swc": true,
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
