--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "setup": "ts-node setup/index.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.21.0",
@@ -35,6 +36,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.62",
     "@tailwindcss/typography": "^0.5.9",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "^20.1.0",
@@ -57,6 +59,7 @@
     "kysely": "^0.25.0",
     "lint-staged": "^13.2.2",
     "pg": "^8.11.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1"
   }
 }
