--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jose": "^4.14.4",
     "js-cookie": "^3.0.5",
     "ky": "^0.33.3",
+    "nanoid-good": "^3.1.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
