--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "setup": "ts-node setup/index.ts"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@supabase/supabase-js": "^2.21.0",
     "@tanstack/react-query": "^4.29.5",
     "@toast-ui/react-editor": "^3.2.3",
@@ -27,6 +28,7 @@
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-loading-skeleton": "^3.2.1",
