--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ SUPABASE_BUCKET_NAME=
 NEXT_PUBLIC_SUPABASE_PROJECT_URL=
 NEXT_PUBLIC_SUPABASE_PUBLIC_ANON_KEY=
 
+# Only used for setup
+SUPABASE_DATABASE_CONNECTION_STRING=
+SUPABASE_DATABASE_SSL_CERTIFICATE=
+
